--- a/Registry/View/Patient List/PatientAssignmentListView.xaml
+++ b/Registry/View/Patient List/PatientAssignmentListView.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:registry="clr-namespace:Registry"
-                    xmlns:stuffLib="clr-namespace:StuffLib;assembly=StuffLib"
                     xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:core="clr-namespace:Core;assembly=StuffLib">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
@@ -13,27 +12,57 @@
         </core:ConverterItem>
         <core:ConverterItem From="{x:Static registry:AssignmentState.Cancelled}">
             <core:ConverterItem.To>
-                <LinearGradientBrush StartPoint="0, 0" EndPoint="0, 1">
-                    <GradientStop Color="Tomato" Offset="0" />
-                    <GradientStop Color="White" Offset="0.2" />
-                    <GradientStop Color="White" Offset="0.8" />
-                    <GradientStop Color="Tomato" Offset="1" />
+                <LinearGradientBrush StartPoint="0, 0"
+                                     EndPoint="0, 1">
+                    <GradientStop Color="Tomato" 
+                                  Offset="0" />
+                    <GradientStop Color="White"
+                                  Offset="0.2" />
+                    <GradientStop Color="White" 
+                                  Offset="0.8" />
+                    <GradientStop Color="Tomato" 
+                                  Offset="1" />
                 </LinearGradientBrush>
             </core:ConverterItem.To>
         </core:ConverterItem>
         <core:ConverterItem From="{x:Static registry:AssignmentState.Completed}">
             <core:ConverterItem.To>
-                <LinearGradientBrush StartPoint="0, 0" EndPoint="0, 1">
-                    <GradientStop Color="ForestGreen" Offset="0" />
-                    <GradientStop Color="White" Offset="0.2" />
-                    <GradientStop Color="White" Offset="0.8" />
-                    <GradientStop Color="ForestGreen" Offset="1" />
+                <LinearGradientBrush StartPoint="0, 0" 
+                                     EndPoint="0, 1">
+                    <GradientStop Color="ForestGreen" 
+                                  Offset="0" />
+                    <GradientStop Color="White" 
+                                  Offset="0.2" />
+                    <GradientStop Color="White" 
+                                  Offset="0.8" />
+                    <GradientStop Color="ForestGreen" 
+                                  Offset="1" />
+                </LinearGradientBrush>
+            </core:ConverterItem.To>
+        </core:ConverterItem>
+        <core:ConverterItem From="{x:Static registry:AssignmentState.Temporary}">
+            <core:ConverterItem.To>
+                <LinearGradientBrush StartPoint="0, 0" 
+                                     EndPoint="0, 1">
+                    <GradientStop Color="Gray" 
+                                  Offset="0" />
+                    <GradientStop Color="White" 
+                                  Offset="0.2" />
+                    <GradientStop Color="White" 
+                                  Offset="0.8" />
+                    <GradientStop Color="Gray" 
+                                  Offset="1" />
                 </LinearGradientBrush>
             </core:ConverterItem.To>
         </core:ConverterItem>
     </core:UniversalConverter>
     <core:UniversalConverter x:Key="AssignmentStateToBorderBrushConverter">
         <core:ConverterItem From="{x:Static registry:AssignmentState.Incompleted}">
+            <core:ConverterItem.To>
+                <SolidColorBrush Color="DimGray" />
+            </core:ConverterItem.To>
+        </core:ConverterItem>
+        <core:ConverterItem From="{x:Static registry:AssignmentState.Temporary}">
             <core:ConverterItem.To>
                 <SolidColorBrush Color="DimGray" />
             </core:ConverterItem.To>
@@ -49,10 +78,10 @@
             </core:ConverterItem.To>
         </core:ConverterItem>
     </core:UniversalConverter>
-
     <DataTemplate DataType="{x:Type registry:PatientAssignmentListViewModel}">
         <DataTemplate.Resources>
-            <core:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" DefaultValue="{x:Static Visibility.Collapsed}">
+            <core:UniversalConverter x:Key="BooleanToInversedVisibilityConverter" 
+                                     DefaultValue="{x:Static Visibility.Collapsed}">
                 <core:ConverterItem To="{x:Static Visibility.Visible}">
                     <core:ConverterItem.From>
                         <system:Boolean>False</system:Boolean>
@@ -60,41 +89,73 @@
                 </core:ConverterItem>
             </core:UniversalConverter>
         </DataTemplate.Resources>
-        <Grid HorizontalAlignment="Stretch" MinHeight="100">
-            <TextBlock HorizontalAlignment="Center" VerticalAlignment="Center" Text="Выберите пациента для просмотра его назначений"
+        <Grid HorizontalAlignment="Stretch" 
+              MinHeight="100">
+            <TextBlock HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" 
+                       Text="Выберите пациента для просмотра его назначений"
                        Visibility="{Binding IsPatientSelected, Converter={StaticResource BooleanToInversedVisibilityConverter}}"/>
-            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" Visibility="{Binding IsPatientSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
-                <TextBlock Margin="5" Text="Отображать назначения" Foreground="DimGray" FontStyle="Italic" />
-                <Border HorizontalAlignment="Stretch" Height="2" Margin="5 0 5 0">
+            <StackPanel Orientation="Vertical" 
+                        HorizontalAlignment="Stretch"
+                        Visibility="{Binding IsPatientSelected, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <TextBlock Margin="5" 
+                           Text="Отображать назначения" 
+                           Foreground="DimGray" 
+                           FontStyle="Italic" />
+                <Border HorizontalAlignment="Stretch" 
+                        Height="2" 
+                        Margin="5 0 5 0">
                     <Border.Background>
-                        <LinearGradientBrush StartPoint="0, 0" EndPoint="1, 0">
-                            <GradientStop Offset="0" Color="Black" />
-                            <GradientStop Offset="1" Color="Gray" />
+                        <LinearGradientBrush StartPoint="0, 0"
+                                             EndPoint="1, 0">
+                            <GradientStop Offset="0" 
+                                          Color="Black" />
+                            <GradientStop Offset="1"
+                                          Color="Gray" />
                         </LinearGradientBrush>
                     </Border.Background>
                 </Border>
-                <CheckBox Margin="5" Content="Невыполненные" IsChecked="{Binding ShowIncompleted}" />
-                <CheckBox Margin="5" IsChecked="{Binding ShowCompleted}" VerticalContentAlignment="Center">
+                <CheckBox Margin="5" 
+                          Content="Невыполненные"
+                          IsChecked="{Binding ShowIncompleted}" />
+                <CheckBox Margin="5" 
+                          IsChecked="{Binding ShowCompleted}"
+                          VerticalContentAlignment="Center">
                     <CheckBox.Content>
-                        <Border BorderBrush="DarkGreen" BorderThickness="0 0 0 2" HorizontalAlignment="Left">
-                            <TextBlock Text="Выполненные" Margin="0 0 0 2" />
+                        <Border BorderBrush="DarkGreen" 
+                                BorderThickness="0 0 0 2" 
+                                HorizontalAlignment="Left">
+                            <TextBlock Text="Выполненные"
+                                       Margin="0 0 0 2" />
                         </Border>
                     </CheckBox.Content>
                 </CheckBox>
                 <CheckBox Margin="5" IsChecked="{Binding ShowCancelled}">
                     <CheckBox.Content>
-                        <Border BorderBrush="Tomato" BorderThickness="0 0 0 2" HorizontalAlignment="Left">
-                            <TextBlock Text="Отменённые" Margin="0 0 0 2" />
+                        <Border BorderBrush="Tomato" 
+                                BorderThickness="0 0 0 2"
+                                HorizontalAlignment="Left">
+                            <TextBlock Text="Отменённые"
+                                       Margin="0 0 0 2" />
                         </Border>
                     </CheckBox.Content>
                 </CheckBox>
-                <ListBox Margin="5" BorderBrush="DimGray" BorderThickness="1" MinHeight="100" MaxHeight="300" ItemsSource="{Binding Assignments}" HorizontalContentAlignment="Stretch" />
+                <ListBox Margin="5" 
+                         BorderBrush="DimGray"
+                         BorderThickness="1"
+                         MinHeight="100"
+                         MaxHeight="300" 
+                         ItemsSource="{Binding Assignments}" 
+                         HorizontalContentAlignment="Stretch" />
             </StackPanel>
         </Grid>
     </DataTemplate>
 
     <DataTemplate DataType="{x:Type registry:PatientAssignmentViewModel}">
-        <Border HorizontalAlignment="Stretch" BorderThickness="1" CornerRadius="5" Background="{Binding State, Converter={StaticResource AssignmentStateToBackgroundConverter}}"
+        <Border HorizontalAlignment="Stretch"
+                BorderThickness="1"
+                CornerRadius="5" 
+                Background="{Binding State, Converter={StaticResource AssignmentStateToBackgroundConverter}}"
                 BorderBrush="{Binding State, Converter={StaticResource AssignmentStateToBorderBrushConverter}}">
             <Grid>
                 <Grid.RowDefinitions>
@@ -106,9 +167,23 @@
                     <ColumnDefinition Width="*" />
                     <ColumnDefinition Width="Auto" />
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="3" Text="{Binding RecordType}" HorizontalAlignment="Center" FontWeight="Bold" Margin="5" />
-                <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding AssignDateTime, StringFormat='dd-MM-yyyy HH:mm'}" Margin="5 0 0 5" />
-                <TextBlock Grid.Row="1" Grid.Column="2" Text="{Binding Room}" Margin="3 0 5 0" Foreground="Gray" FontStyle="Italic" />
+                <TextBlock Grid.Row="0"
+                           Grid.Column="0" 
+                           Grid.ColumnSpan="3" 
+                           Text="{Binding RecordType}" 
+                           HorizontalAlignment="Center"
+                           FontWeight="Bold" 
+                           Margin="5" />
+                <TextBlock Grid.Row="1"
+                           Grid.Column="0" 
+                           Text="{Binding AssignDateTime, StringFormat='dd-MM-yyyy HH:mm'}"
+                           Margin="5 0 0 5" />
+                <TextBlock Grid.Row="1"
+                           Grid.Column="2"
+                           Text="{Binding Room}"
+                           Margin="3 0 5 0" 
+                           Foreground="Gray" 
+                           FontStyle="Italic" />
             </Grid>
         </Border>
     </DataTemplate>
