--- a/Registry/View/Schedule/RoomView.xaml
+++ b/Registry/View/Schedule/RoomView.xaml
@@ -8,29 +8,42 @@
     <DataTemplate DataType="{x:Type registry:RoomViewModel}">
         <DataTemplate.Resources>
             <Style TargetType="{x:Type ItemsControl}">
-                <Setter Property="Width" Value="200" />
-                <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                <Setter Property="VerticalContentAlignment" Value="Stretch" />
-                <Setter Property="BorderThickness" Value="0.5" />
-                <Setter Property="BorderBrush" Value="Gray" />
+                <Setter Property="Width"
+                        Value="200" />
+                <Setter Property="HorizontalContentAlignment"
+                        Value="Stretch" />
+                <Setter Property="VerticalContentAlignment"
+                        Value="Stretch" />
+                <Setter Property="BorderThickness" 
+                        Value="0.5" />
+                <Setter Property="BorderBrush"
+                        Value="Gray" />
             </Style>
         </DataTemplate.Resources>
         <Grid>
             <!--Working time layer-->
-            <ItemsControl ItemsSource="{Binding WorkingTimes}" Background="Gray" IsHitTestVisible="False">
+            <ItemsControl ItemsSource="{Binding WorkingTimes}" 
+                          Background="Gray" 
+                          IsHitTestVisible="False">
                 <i:Interaction.Behaviors>
                     <core:IgnoreMouseWheelBehavior />
                 </i:Interaction.Behaviors>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
-                                                        UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}"/>
+                        <xctk:TimelinePanel BeginDate="{Binding OpenTime}"
+                                            EndDate="{Binding CloseTime}" 
+                                            Orientation="Vertical" 
+                                            OverlapBehavior="Stretch"
+                                            UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" 
+                                            UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}"/>
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
                     <Style>
-                        <Setter Property="xctk:TimelinePanel.Date" Value="{Binding StartTime, Mode=OneTime}" />
-                        <Setter Property="xctk:TimelinePanel.DateEnd" Value="{Binding EndTime, Mode=OneTime}" />
+                        <Setter Property="xctk:TimelinePanel.Date" 
+                                Value="{Binding StartTime, Mode=OneTime}" />
+                        <Setter Property="xctk:TimelinePanel.DateEnd" 
+                                Value="{Binding EndTime, Mode=OneTime}" />
                     </Style>
                 </ItemsControl.ItemContainerStyle>
                 <ItemsControl.ItemTemplate>
@@ -46,14 +59,20 @@
                 </i:Interaction.Behaviors>
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <xctk:TimelinePanel BeginDate="{Binding OpenTime}" EndDate="{Binding CloseTime}" Orientation="Vertical" OverlapBehavior="Stretch"
-                                                        UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}" />
+                        <xctk:TimelinePanel BeginDate="{Binding OpenTime}"
+                                            EndDate="{Binding CloseTime}" 
+                                            Orientation="Vertical" 
+                                            OverlapBehavior="Stretch"
+                                            UnitSize="{x:Static main:Configuration.ScheduleUnitPerTimeInterval}" 
+                                            UnitTimeSpan="{x:Static main:Configuration.ScheduleUnitTimeInterval}" />
                     </ItemsPanelTemplate>
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemContainerStyle>
                     <Style>
-                        <Setter Property="xctk:TimelinePanel.Date" Value="{Binding StartTime, Mode=OneTime}" />
-                        <Setter Property="xctk:TimelinePanel.DateEnd" Value="{Binding EndTime, Mode=OneTime}" />
+                        <Setter Property="xctk:TimelinePanel.Date" 
+                                Value="{Binding StartTime, Mode=OneTime}" />
+                        <Setter Property="xctk:TimelinePanel.DateEnd" 
+                                Value="{Binding EndTime, Mode=OneTime}" />
                     </Style>
                 </ItemsControl.ItemContainerStyle>
             </ItemsControl>
